initial websocket proxy

--- a/ws_service/Makefile
+++ b/ws_service/Makefile
@@ -12,14 +12,14 @@ all: service
 test: service
 	$(GO) test -v -cover
 
-service: go.sum service.go courses.go users.go service_grpc.pb.go
+service: go.sum service.go
 	$(GO) build $(GOGLAGS) .
 
 go.sum: go.mod
 	$(GO) mod download
 
-service_grpc.pb.go: ../service.proto
-	$(PROTOC) --go-grpc_out=. ../service.proto
+service.pb.go: ../service.proto
+	$(PROTOC) --go_out=. ../service.proto
 
 clean:
 	$(RM) *.pb.go
