--- a/core_service/Makefile
+++ b/core_service/Makefile
@@ -12,15 +12,19 @@ all: service
 test: service
 	$(GO) test -v -cover
 
-service: go.sum service.go courses.go users.go service_grpc.pb.go
+service: go.sum service.go courses.go users.go service_grpc.pb.go service.pb.go
+	$(GO) get yajudge/service
 	$(GO) build $(GOGLAGS) .
 
 go.sum: go.mod
 	$(GO) mod download
 
 service_grpc.pb.go: ../service.proto
-	$(PROTOC) --go-grpc_out=. ../service.proto
+	$(PROTOC) --go-grpc_out=. -I.. service.proto
+
+service.pb.go: ../service.proto
+	$(PROTOC) --go_out=. -I.. service.proto
 
 clean:
-	$(RM) *.pb.go
-	$(RM) go.sum
+	$(RM) *.pb.go || true
+	$(RM) go.sum || true
