--- a/yajudge_server/yajudge-server.ini
+++ b/yajudge_server/yajudge-server.ini
@@ -6,12 +6,16 @@ Name = yajudge_test
 Password = qwerty
 
 [Web]
-ListenAddr = :8080
+ListenAddr = localhost:8080
 ContentPrefix = /
 ApiPrefix = /api-ws
 
 [Rpc]
-ListenAddr = :9095
+ListenAddr = localhost:9095
 PublicAuthToken = abrakadabra
 PrivateAuthToken = zxcvbnmsdfsd
 
+[Log]
+ErrorFile = errors.log
+AccessFile = access.log
+RpcFile = rpc.log
