--- a/yajudge_client/pubspec.yaml
+++ b/yajudge_client/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   visibility_detector: ^0.2.0
   ffi: ^1.1.2
   archive: ^3.1.2
-#  flutter_modular: ^3.3.1
+  simple_html_css: ^3.0.1
   flutter:
     sdk: flutter
 
