--- a/yajudge_client/pubspec.yaml
+++ b/yajudge_client/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   archive: ^3.1.2
   simple_html_css: ^3.0.1
   universal_html: ^2.0.8
+  intl: ^0.17.0
   flutter:
     sdk: flutter
 
