--- a/yajudge_client/pubspec.yaml
+++ b/yajudge_client/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_treeview: ^1.0.4+1
   flutter_markdown: ^0.6.2
+  google_fonts: ^2.1.0
   flutter_web_plugins:
     sdk: flutter
 
