--- a/yajudge_client/pubspec.yaml
+++ b/yajudge_client/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   archive: ^3.1.2
   universal_html: ^2.0.8
   intl: ^0.17.0
+  url_launcher: ^6.0.9
   flutter:
     sdk: flutter
 
