Initial grader launch support

--- a/yajudge_grader/src/CMakeLists.txt
+++ b/yajudge_grader/src/CMakeLists.txt
@@ -2,15 +2,15 @@ cmake_minimum_required(VERSION 3.10)
 project(yajudge-helpers)
 find_package(PkgConfig REQUIRED)
 
-if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-    pkg_check_modules(FUSE REQUIRED fuse3)
-else()
-    message(FATAL_ERROR "Unsupported operation system")
-endif()
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY  "${CMAKE_CURRENT_SOURCE_DIR}/../libexec")
 
+pkg_check_modules(CAP REQUIRED libcap)
 
-add_executable(yajudge-overlay-fs overlay-fs.cpp)
-target_link_libraries(yajudge-overlay-fs ${FUSE_LIBRARIES})
-target_include_directories(yajudge-overlay-fs PRIVATE ${FUSE_INCLUDE_DIRS})
-target_compile_options(yajudge-overlay-fs PRIVATE ${FUSE_CFLAGS_OTHER})
-add_executable(yajudge-launcher guarded-launcher.cpp)
+add_executable(overlay-mount overlay-mount.c)
+target_include_directories(overlay-mount PRIVATE ${CAP_INCLUDE_DIRS})
+target_compile_options(overlay-mount PRIVATE ${CAP_CFLAGS_OTHER})
+target_link_libraries(overlay-mount ${CAP_LIBRARIES})
+
+add_executable(cgroup-run cgroup-run.c)
+add_executable(move-pid-to-cgroup move-pid-to-cgroup.c)
