--- a/yajudge_grader/conf/grader-server.yaml
+++ b/yajudge_grader/conf/grader-server.yaml
@@ -1,8 +1,10 @@
-working_directory: ./work
 rpc:
   host: localhost
   port: 9095
   public_token: abrakadabra
   private_token: zxcvbnmsdfsd
 extra_runtimes: [valgrind, wine]  # currently supported: [valgrind, qemu-arm, wine]
-system_environment: ./alpine-linux
+locations:
+  system_environment: ./alpine
+  working_directory: ./work
+  cache_directory: ./cache
