--- a/yajudge_master/conf/master-server.yaml
+++ b/yajudge_master/conf/master-server.yaml
@@ -1,9 +1,9 @@
 database:
   host: localhost
   port: 5432
-  user: test
-  name: yajudge_devel
-  password: qwerty
+  user: yajudge
+  name: yajudge
+  password: yajudge
 
 rpc:
   host: localhost
