Linux grading implementation using cgroup v2

--- a/yajudge_grader/src/CMakeLists.txt
+++ b/yajudge_grader/src/CMakeLists.txt
@@ -12,6 +12,6 @@ target_include_directories(overlay-mount PRIVATE ${CAP_INCLUDE_DIRS})
 target_compile_options(overlay-mount PRIVATE ${CAP_CFLAGS_OTHER})
 target_link_libraries(overlay-mount ${CAP_LIBRARIES})
 
-add_executable(cgroup-run cgroup-run.c)
-add_executable(move-pid-to-cgroup move-pid-to-cgroup.c)
+add_executable(limited-run limited-run.c)
+add_executable(initial-cgroup-setup initial-cgroup-setup.c)
 
