fine tune options to enable/disable distinct sanitizers

--- a/yajudge_grader/conf/grader-server.yaml
+++ b/yajudge_grader/conf/grader-server.yaml
@@ -8,8 +8,7 @@ locations:
   working_directory: '$HOME/yajudge/work'
   cache_directory: '$HOME/yajudge/cache'
 compilers:
-  enable_sanitizers: true # set 'false' for Alpine Linux environment or 'true' for glibc-based environments
-  sanitizers_compile_options: -fsanitize=undefined -fsanitize=address -fno-sanitize-recover=all
+  enable_sanitizers: undefined address
   enable_valgrind: true
   valgrind_extra_memory_limit_mb: 16 # adds extra megabytes for valgrind runtime
   valgrind_cpu_time_scale: 2.0 # adds extra time for valgrind runtime
