--- a/yajudge_client/pubspec.yaml
+++ b/yajudge_client/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   universal_html: ^2.0.8
   intl: ^0.17.0
   url_launcher: ^6.0.9
+  logging: ^1.0.2
   flutter:
     sdk: flutter
 
