--- a/yajudge_grader/src/CMakeLists.txt
+++ b/yajudge_grader/src/CMakeLists.txt
@@ -15,3 +15,7 @@ target_link_libraries(overlay-mount ${CAP_LIBRARIES})
 add_executable(limited-run limited-run.c)
 add_executable(initial-cgroup-setup initial-cgroup-setup.c)
 
+# build a library to check for errors
+# this file will be compiled into targets
+add_library(syscall-wrappers syscall-wrappers.c)
+
