--- a/yajudge_grader/src/CMakeLists.txt
+++ b/yajudge_grader/src/CMakeLists.txt
@@ -17,5 +17,6 @@ add_executable(initial-cgroup-setup initial-cgroup-setup.c)
 
 # build a library to check for errors
 # this file will be compiled into targets
-add_library(syscall-wrappers syscall-wrappers.c)
+add_library(yajudge-security SHARED proc-limiter.c)
+target_link_libraries(yajudge-security -ldl)
 
