improved dependencies in Makefile for grader

--- a/yajudge_grader/Makefile
+++ b/yajudge_grader/Makefile
@@ -8,9 +8,9 @@ first: all
 
 all: grader
 
-grader: bin/yajudge-grader.exe
-bin/yajudge-grader.exe: deps gen lib/grader_main.dart bin/yajudge-grader.dart lib/src/*.dart
-	$(DART) compile exe bin/yajudge-grader.dart
+grader: bin/yajudge-grader
+bin/yajudge-grader: .packages lib/src/generated/assets.gen.dart lib/grader_main.dart bin/yajudge-grader.dart $(find lib/src/*.dart -type f)
+	$(DART) compile exe -o bin/yajudge-grader bin/yajudge-grader.dart
 
 deps: .packages
 .packages:
@@ -20,8 +20,8 @@ gen: lib/src/generated/assets.gen.dart
 lib/src/generated/assets.gen.dart: resources/*
 	$(DART) run lib/build_assets.dart
 
-install: grader
-	$(INSTALL) -D bin/yajudge-grader.exe $(PREFIX)/bin/yajudge-grader
+install: bin/yajudge-grader yajudge-grader.service conf/grader.yaml
+	$(INSTALL) -D bin/yajudge-grader $(PREFIX)/bin/yajudge-grader
 	$(INSTALL) -D yajudge-grader.service $(ETC)/systemd/system.control/yajudge-grader.service
 	if [ -f $(ETC)/yajudge/grader.yaml ]
 	then
@@ -30,12 +30,11 @@ install: grader
 		$(INSTALL) -D conf/grader.yaml $(ETC)/yajudge/grader.yaml
 	fi
 
-
 clean:
 	$(RM) .dart_tool || true
 	$(RM) .packages || true
 	$(RM) pubspec.lock || true
 	$(RM) lib/src/generated || true
-	$(RM) bin/*.exe || true
+	$(RM) bin/yajudge-grader || true
 
 
