--- a/yajudge_grader/Makefile
+++ b/yajudge_grader/Makefile
@@ -1,15 +1,20 @@
 DART=dart
 RM=rm -rf
 INSTALL=install
+USERADD=useradd -rmU -s /usr/sbin/nologin
+MAKEDIRS=mkdir -p
+
 PREFIX=/usr
 ETC=/etc
+USER=yajudge
+
 
 first: all
 
 all: grader
 
 grader: bin/yajudge-grader
-bin/yajudge-grader: .packages lib/src/generated/assets.gen.dart lib/grader_main.dart bin/yajudge-grader.dart $(find lib/src/*.dart -type f)
+bin/yajudge-grader: .packages lib/src/generated/assets.gen.dart $(wildcard lib/src/*.dart) lib/grader_main.dart
 	$(DART) compile exe -o bin/yajudge-grader bin/yajudge-grader.dart
 
 deps: .packages
@@ -17,18 +22,28 @@ deps: .packages
 	$(DART) pub get
 
 gen: lib/src/generated/assets.gen.dart
-lib/src/generated/assets.gen.dart: resources/*
+lib/src/generated/assets.gen.dart: $(wildcard resources/*)
 	$(DART) run lib/build_assets.dart
 
 install: bin/yajudge-grader yajudge-grader.service conf/grader.yaml
 	$(INSTALL) -D bin/yajudge-grader $(PREFIX)/bin/yajudge-grader
-	$(INSTALL) -D yajudge-grader.service $(ETC)/systemd/system.control/yajudge-grader.service
-	if [ -f $(ETC)/yajudge/grader.yaml ]
-	then
-		$(INSTALL) -D conf/grader.yaml $(ETC)/yajudge/grader.yaml.new
-	else
-		$(INSTALL) -D conf/grader.yaml $(ETC)/yajudge/grader.yaml
-	fi
+	$(INSTALL) -D -m 0644 yajudge-grader.service $(ETC)/systemd/system.control/yajudge-grader.service
+	if [ -f $(ETC)/yajudge/grader.yaml ]; then $(INSTALL) -m 0644 -D conf/grader.yaml $(ETC)/yajudge/grader.yaml.new; else $(INSTALL) -D -m 0644 conf/grader.yaml $(ETC)/yajudge/grader.yaml; fi
+	if [ ! -d /var/log/yajudge ]; then $(MAKEDIRS) /var/log/yajudge; fi
+	chown $(USER):$(USER) /var/log/yajudge
+	chmod 0770 /var/log/yajudge
+	if [ ! -d /run/yajudge ]; then $(MAKEDIRS) /run/yajudge; fi
+	chown $(USER):$(USER) /run/yajudge
+	chmod 0770 /run/yajudge
+	if [ ! -d /var/cache/yajudge ]; then $(MAKEDIRS) /var/cache/yajudge; fi
+	chown $(USER):$(USER) /var/cache/yajudge
+	chmod 0770 /var/cache/yajudge/
+	touch $(ETC)/yajudge/private-token.txt
+	chown $(USER):$(USER) $(ETC)/yajudge/private-token.txt
+	chmod 0660 $(ETC)/yajudge/private-token.txt
+
+user:
+	if [ ! `id -u $(USER)` ]; then $(USERADD) -d /var/lib/$(USER) $(USER); fi
 
 clean:
 	$(RM) .dart_tool || true
