--- a/yajudge_grader/conf/grader.yaml
+++ b/yajudge_grader/conf/grader.yaml
@@ -1,24 +1,26 @@
 service:
-  log_file: '$HOME/yajudge/grader.log'
-  pid_file: '$HOME/yajudge/grader.pid'
-  systemd_slice: 'yajudge'
+  # NOTE: service configuration has less priority than command-line arguments
+  log_file: '$LOGS_DIRECTORY/grader.log'     # /var/log/yajudge/grader.log
+  pid_file: '$RUNTIME_DIRECTORY/grader.pid'  # /run/yajudge/grader.pid
+  systemd_slice: 'yajudge-grader'  # has effect only while starting via 'yajudge-grader start' command
 
 rpc:
   host: localhost
   port: 9095
-  public_token: abrakadabra
-  private_token: zxcvbnmsdfsd
+
+  # private token must be stored in separate file not readable by random user
+  private_token_file: '$CONFIGURATION_DIRECTORY/private-token.txt'  # /etc/yajudge/private-token.txt
 
 locations:
-  system_environment: '$HOME/yajudge/debian'
-  working_directory: '$HOME/yajudge/work'
-  cache_directory: '$HOME/yajudge/cache'
+  system_environment: '$STATE_DIRECTORY/system'  # /var/lib/yajudge/system
+  working_directory: '$STATE_DIRECTORY/work'     # /var/lib/yajudge/work
+  cache_directory: '$CACHE_DIRECTORY'            # /var/cache/yajudge
 
 compilers:
-  enable_sanitizers: undefined address
+  enable_sanitizers: undefined address  # unset in case of using Apline Linux: it lacks support of sanitizers
   enable_valgrind: true
-  valgrind_extra_memory_limit_mb: 16 # adds extra megabytes for valgrind runtime
-  valgrind_cpu_time_scale: 2.0 # adds extra time for valgrind runtime
+  valgrind_extra_memory_limit_mb: 16  # adds extra megabytes for valgrind runtime
+  valgrind_cpu_time_scale: 2.0  # adds extra time for valgrind runtime
   c_compiler: clang
   cxx_compiler: clang
   c_base_options: -O2 -g -Werror
