master service systemd integration

--- a/yajudge_master/yajudge-master.service
+++ b/yajudge_master/yajudge-master.service
@@ -2,6 +2,7 @@
 Description=Yajudge master service
 
 [Service]
+After=network.target postgresql.target
 Type=exec
 RuntimeDirectory=yajudge
 ConfigurationDirectory=yajudge
