master service systemd integration

--- a/yajudge_master/yajudge-master.service
+++ b/yajudge_master/yajudge-master.service
@@ -1,8 +1,8 @@
 [Unit]
 Description=Yajudge master service
+After=network.target postgresql.service
 
 [Service]
-After=network.target postgresql.target
 Type=exec
 RuntimeDirectory=yajudge
 ConfigurationDirectory=yajudge
