--- a/yajudge_grader/Makefile
+++ b/yajudge_grader/Makefile
@@ -3,6 +3,7 @@ RM=rm -rf
 INSTALL=install
 USERADD=useradd -rmU -s /usr/sbin/nologin
 MAKEDIRS=mkdir -p
+SYSTEMCTL=systemctl
 
 PREFIX=/usr
 ETC=/etc
@@ -25,9 +26,13 @@ gen: lib/src/generated/assets.gen.dart
 lib/src/generated/assets.gen.dart: $(wildcard resources/*)
 	$(DART) run lib/build_assets.dart
 
-install: bin/yajudge-grader yajudge-grader.service conf/grader.yaml
+install: bin/yajudge-grader yajudge-grader@.service yajudge-grader-prepare.service yajudge-grader.slice conf/grader.yaml
 	$(INSTALL) -D bin/yajudge-grader $(PREFIX)/bin/yajudge-grader
-	$(INSTALL) -D -m 0644 yajudge-grader.service $(ETC)/systemd/system/yajudge-grader.service
+	$(INSTALL) -D -m 0644 yajudge-grader@.service $(ETC)/systemd/system/yajudge-grader@.service
+	ln -f -s -T yajudge-grader@.service $(ETC)/systemd/system/yajudge-grader@default.service
+	$(INSTALL) -D -m 0644 yajudge-grader.slice $(ETC)/systemd/system/yajudge-grader.slice
+	$(INSTALL) -D -m 0644 yajudge-grader-prepare.service $(ETC)/systemd/system/yajudge-grader-prepare.service
+	$(SYSTEMCTL) daemon-reload
 	if [ -f $(ETC)/yajudge/grader.yaml ]; then $(INSTALL) -m 0644 -D conf/grader.yaml $(ETC)/yajudge/grader.yaml.new; else $(INSTALL) -D -m 0644 conf/grader.yaml $(ETC)/yajudge/grader.yaml; fi
 	if [ ! -d /var/log/yajudge ]; then $(MAKEDIRS) /var/log/yajudge; fi
 	chown $(USER):$(USER) /var/log/yajudge
