--- a/yajudge_grader/conf/grader.yaml
+++ b/yajudge_grader/conf/grader.yaml
@@ -1,7 +1,7 @@
 service:
   # NOTE: service configuration has less priority than command-line arguments
-  log_file: '$LOGS_DIRECTORY/grader.log'     # /var/log/yajudge/grader.log
-  pid_file: '$RUNTIME_DIRECTORY/grader.pid'  # /run/yajudge/grader.pid
+  log_file: '$LOGS_DIRECTORY/grader-$NAME.log'     # /var/log/yajudge/grader-default.log
+  pid_file: '$RUNTIME_DIRECTORY/grader-$NAME.pid'  # /run/yajudge/grader-default.pid
   systemd_slice: 'yajudge-grader'  # has effect only while starting via 'yajudge-grader start' command
 
 rpc:
@@ -12,12 +12,12 @@ rpc:
   private_token_file: '$CONFIGURATION_DIRECTORY/private-token.txt'  # /etc/yajudge/private-token.txt
 
 locations:
-  system_environment: '$STATE_DIRECTORY/system'  # /var/lib/yajudge/system
-  working_directory: '$STATE_DIRECTORY/work'     # /var/lib/yajudge/work
-  cache_directory: '$CACHE_DIRECTORY'            # /var/cache/yajudge
+  system_environment: '$STATE_DIRECTORY/system'        # /var/lib/yajudge/system
+  working_directory: '$STATE_DIRECTORY/work/$NAME'     # /var/lib/yajudge/work/default
+  cache_directory: '$CACHE_DIRECTORY/$NAME'            # /var/cache/yajudge/default
 
 compilers:
-  enable_sanitizers: undefined address  # unset in case of using Apline Linux: it lacks support of sanitizers
+  enable_sanitizers: undefined address  # unset in case of using Alpine Linux: it lacks support of sanitizers
   enable_valgrind: true
   valgrind_extra_memory_limit_mb: 16  # adds extra megabytes for valgrind runtime
   valgrind_cpu_time_scale: 2.0  # adds extra time for valgrind runtime
