--- a/yajudge_master/conf/master.yaml
+++ b/yajudge_master/conf/master.yaml
@@ -8,13 +8,14 @@ database:
   port: 5432
   user: yajudge
   name: yajudge
-  password: yajudge
+  # database password must be stored in separate file not readable by most users
+  password_file: '$CONFIGURATION_DIRECTORY/database-password.txt'
 
 rpc:
   host: any
   port: 9095
 
-  # private token must be stored in separate file not readable by random user
+  # private token must be stored in separate file not readable by most users
   private_token_file: '$CONFIGURATION_DIRECTORY/private-token.txt'  # /etc/yajudge/private-token.txt
 
 locations:
