--- a/yajudge_master/conf/nginx.conf
+++ b/yajudge_master/conf/nginx.conf
@@ -12,11 +12,12 @@ server {
 
     location / {
         # set path to 'web' subdirectory of yajudge installed files
-        root /home/yajudge/yajudge/yajudge_client/build/web;
+        root /usr/share/yajudge/web;
         index index.html;
     }
 
     location ~* \/service\.(.+)$ {
+        # must match envoy service configuration
         proxy_pass http://localhost:9081;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
