--- a/yajudge_master/conf/nginx.in.conf
+++ b/yajudge_master/conf/nginx.in.conf
@@ -1,18 +1,19 @@
 server {
     # set your server name and port numbers
-    server_name your-server-name;
+    # Note: if you will use SSL configiration prefer http2 prior to http
+    server_name localhost;
     listen 80;
     listen [::]:80;
 
     charset utf-8;
 
     # set path to logs pointing to write-accessible directory
-    access_log /var/log/nginx/yajudge.access.log;
-    error_log /var/log/nginx/yajudge.error.log;
+    access_log @LOGS_DIRECTORY/yajudge.access.log;
+    error_log @LOGS_DIRECTORY/yajudge.error.log;
 
     location / {
         # set path to 'web' subdirectory of yajudge installed files
-        root /usr/share/yajudge/web;
+        root @WEB_DIRECTORY;
         index index.html;
     }
 
