fixed bundle installation for Linux

--- a/yajudge_grader/yajudge-grader@.in.service
+++ b/yajudge_grader/yajudge-grader@.in.service
@@ -10,8 +10,8 @@ Group=@YAJUDGE_USER
 Slice=yajudge-grader.slice
 Delegate=yes
 
-ExecStartPre=mkdir -p @LOGS_DIRECTORY @RUNTIME_DIRECTORY @CACHE_DIRECTORY @STATE_DIRECTORY && chown @YAJUDGE_USER:@YAJUDGE_USER @LOGS_DIRECTORY @RUNTIME_DIRECTORY @CACHE_DIRECTORY @STATE_DIRECTORY && chmod 0770 @LOGS_DIRECTORY @RUNTIME_DIRECTORY @CACHE_DIRECTORY @STATE_DIRECTORY
-ExecStart=@BIN_DIR/yajudge-grader -N %i -C @CONFIGURATION_DIRECTORY/grader.yaml -P @RUNTIME_DIRECTORY/grader-%i.pid -L @LOGS_DIRECTORY/grader-%i.log daemon
+ExecStartPre=bash -c 'mkdir -p @LOGS_DIRECTORY @RUNTIME_DIRECTORY @CACHE_DIRECTORY @WORK_DIR && chown @YAJUDGE_USER:@YAJUDGE_USER @LOGS_DIRECTORY @RUNTIME_DIRECTORY @CACHE_DIRECTORY @WORK_DIR && chmod 0770 @LOGS_DIRECTORY @RUNTIME_DIRECTORY @CACHE_DIRECTORY @WORK_DIR'
+ExecStart=@BIN_DIR/yajudge-grader -N %i -C @CONFIGURATION_DIRECTORY/grader-%i.yaml -P @RUNTIME_DIRECTORY/grader-%i.pid -L @LOGS_DIRECTORY/grader-%i.log daemon
 ExecStopPost=/bin/rm -f @RUNTIME_DIRECTORY/grader-%i.pid
 PIDFile=@RUNTIME_DIRECTORY/grader-%i.pid
 
