--- a/yajudge_master/yajudge-master@.in.service
+++ b/yajudge_master/yajudge-master@.in.service
@@ -4,7 +4,7 @@ Requires=postgresql.service yajudge-envoy@%i.service
 
 [Service]
 Type=exec
-ExecStartPre=mkdir -p @LOGS_DIRECTORY @RUNTIME_DIRECTORY @STATE_DIRECTORY && chown @YAJUDGE_USER:@YAJUDGE_USER @LOGS_DIRECTORY @RUNTIME_DIRECTORY @STATE_DIRECTORY && chmod 0770 @LOGS_DIRECTORY @RUNTIME_DIRECTORY @STATE_DIRECTORY
+ExecStartPre=bash -c 'mkdir -p @LOGS_DIRECTORY @RUNTIME_DIRECTORY && chown @YAJUDGE_USER:@YAJUDGE_USER @LOGS_DIRECTORY @RUNTIME_DIRECTORY && chmod 0770 @LOGS_DIRECTORY @RUNTIME_DIRECTORY'
 ExecStart=@BIN_DIR/yajudge-master -C @CONFIGURATION_DIRECTORY/master-%i.yaml -P @RUNTIME_DIRECTORY/master-%i.pid -L @LOGS_DIRECTORY/master-%i.log daemon
 ExecStopPost=/bin/rm -f @RUNTIME_DIRECTORY/master-%i.pid
 PIDFile=@RUNTIME_DIRECTORY/master-%i.pid
