nginx config fixed for SPA routing

--- a/yajudge_master/conf/nginx.in.conf
+++ b/yajudge_master/conf/nginx.in.conf
@@ -15,6 +15,7 @@ server {
         # set path to 'web' subdirectory of yajudge installed files
         root @WEB_DIRECTORY;
         index index.html;
+        try_files $uri $uri/ /index.html;
     }
 
     location ~* \/service\.(.+)$ {
