--- a/yajudge_master/yajudge-master@.in.service
+++ b/yajudge_master/yajudge-master@.in.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Yajudge master instance service
-Requires=postgresql.service yajudge-envoy@%i.service
+Requires=postgresql.service
 
 [Service]
 Type=exec
