default configuration changed to use nginx+grpcwebserver chain

--- a/yajudge_grpcwebserver/conf/grpcwebserver.in.yaml
+++ b/yajudge_grpcwebserver/conf/grpcwebserver.in.yaml
@@ -1,6 +1,5 @@
 listen:
-  http_port: 80
-  https_port: 443
-  bind_address: any
+  http_port: 8080
+  bind_address: localhost
 
 sites_conf_directory: '@CONFIGURATION_DIRECTORY/sites-enabled'
