grader: removed exec from default forbidden functions config due to sanitizer problem

--- a/yajudge_grader/conf/grader.in.yaml
+++ b/yajudge_grader/conf/grader.in.yaml
@@ -42,4 +42,4 @@ default_limits:
   allow_network: false
 
 default_security_context:
-  forbidden_functions: fork clone kill unlink chroot execvp execlp execv execl execve execle
+  forbidden_functions: fork clone kill unlink chroot
