--- a/yajudge_master/pubspec.yaml
+++ b/yajudge_master/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   args: ^2.3.0
   path: ^1.8.0
   grpc: ^3.0.2
+  protobuf: ^2.0.1
   postgres: ^2.4.3
   crypto: ^3.0.1
   xml: ^5.3.1
