--- a/yajudge_common/pubspec.yaml
+++ b/yajudge_common/pubspec.yaml
@@ -7,7 +7,8 @@ environment:
 dependencies:
   grpc: ^3.0.2
   yaml: ^3.1.0
-  path: ">=1.8.0"
+  path: ">=1.8.1"
+  protobuf: ^2.0.1
 
 
 dev_dependencies:
