--- a/yajudge_grader/pubspec.yaml
+++ b/yajudge_grader/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   posix: ^3.1.0
   tuple: ^2.0.0
   crypto: ^3.0.2
+  yaml: ^3.1.1
+  protobuf: ^2.0.1
 
 dev_dependencies:
   lints: ^2.0.0
