--- a/yajudge_client/pubspec.yaml
+++ b/yajudge_client/pubspec.yaml
@@ -8,6 +8,7 @@ dependencies:
   yajudge_common:
     path: ../yajudge_common
   fixnum: ^1.0.1
+  protobuf: ^2.0.1
   grpc: ^3.0.2
   yaml: ^3.1.0
   yaml_writer: ^1.0.1
