--- a/yajudge_grpcwebserver/conf/site@.in.yaml
+++ b/yajudge_grpcwebserver/conf/site@.in.yaml
@@ -8,3 +8,7 @@ grpc_backend_port: 9095
 # Common Web-application configuration
 web_app_static_root: '@WEB_DIRECTORY'
 web_app_index_file: '/index.html'
+
+# Static files cache properties
+web_app_static_max_age: 24  # force update SPA every 24 hours
+static_reload_interval: 10  # check for static file changes every 10 seconds
